[package]
name = "portick-bacon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "*", features = ["full"] }
tracing = "*"
tracing-subscriber = "*" 
libp2p = {version = "*", features = ["full"]}
futures = "*"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "*"
